fix fixed header (hero wrap)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,16 +48,27 @@ a {
   opacity: 0.9;
 }
 /* Header */
-.header {
+.fixed-header {
+  background: #e6f0ff;
+  padding-top: 26px;
+  position: sticky;
+  top: -26px;
+  z-index: 1;
+}
+
+.hero-wrap {
   background: #e6f0ff;
   height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar {
   display: flex;
   align-items: center;
-  padding-top: 38px;
+  /* padding-top: 38px; */
+  padding: 12px 0;
 }
 .navbar ul {
   display: flex;
